# python-codejam-2022

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: game.py  gol_abc.py  server.py  sprites.py
src/game/: client.py  game.py
src/server/: main.py
